--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
-      <meta charset="utf-8">
+    <meta charset="utf-8">
       <title>Bookstore</title>
-      <link rel="stylesheet" href="">
-   </head>
+      <link rel="stylesheet" href="css/style.css">
+   </head> Bookstore
    <body>
+      <header>
+         <nav>
+            <ul>
+               <li>Home</li>
+               <li>About</li>
+               <li>Contact</li>
+            </ul>
+         </nav>
+      </header>
+      <main>
+         <div><img src="img/sampleimg.jpg" width=400 alt=""><img src="img/sampleimg.jpg" width=400 alt=""></div>
+         <h1>Design</h1>
+         <p>Design <i>is</i> cool</p>
+         <h2>Graphic Design</h2>
+         <p>Image and type design</p>
+         <h3>Typography</h3>
+         <p> What even is happening?</p>
+         <h4>Manhattan</h4>
+      </main>
+      <footer>
+         <p> Copyright <span>|</span> Contact | My Address </p>
+      </footer>
    </body>
 </html>
