Organized HTML content. Italicized text.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
          </nav>
       </header>
       <main>
-         <div><img src="img/sampleimg.jpg" width=400 alt=""><img src="img/sampleimg.jpg" width=400 alt=""></div>
-         <h1>Design</h1>
-         <p>Design <i>is</i> cool</p>
-         <h2>Graphic Design</h2>
-         <p>Image and type design</p>
-         <h3>Typography</h3>
-         <p> What even is happening?</p>
-         <h4>Manhattan</h4>
+         <h1>Bookstore</h1>
+            <h2>Art</h2>
+               <h3>Artists</h3>
+               <h4>Salvidor Dalí</h4>
+                <nav>
+                  <ul>
+                     <li>Dalí was a skilled draftsman, best known for the striking and bizarre images in his surrealist work. His painterly skills are often attributed to the influence of Renaissance masters. His best-known work, <i>The Persistence of Memory</i>, was completed in August 1931. Dalí’s expansive artistic répertoire included film, sculpture, and photography, in collaboration with a range of artists in a variety of media.</li>
+                  </ul>
+                </nav>
+            <h2>Engineering</h2>
+               <h3>Engineers</h3>
+                  <h3>Tim Berners-Lee</h3>
       </main>
       <footer>
          <p> Copyright <span>|</span> Contact | My Address </p>
