Added SD image to HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
       <title>Bookstore</title>
       <link rel="stylesheet" href="css/style.css">
-   </head> Bookstore
+   </head> Bookstore Directory
    <body>
       <header>
          <nav>
@@ -16,11 +16,11 @@
          </nav>
       </header>
       <main>
-         <h1>Bookstore</h1>
+         <h1>Bookstore Directory</h1>
             <h2>Art</h2>
                <h3>Artists</h3>
                <h4>Salvidor Dalí</h4>
-                <nav>
+                <nav> <div><img src="img/sd-img.jpg" height="300" alt=""></div>
                   <ul>
                      <li>Dalí was a skilled draftsman, best known for the striking and bizarre images in his surrealist work. His painterly skills are often attributed to the influence of Renaissance masters. His best-known work, <i>The Persistence of Memory</i>, was completed in August 1931. Dalí’s expansive artistic répertoire included film, sculpture, and photography, in collaboration with a range of artists in a variety of media.</li>
                   </ul>
