Added TBL image to HTML

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <h2>Engineering</h2>
                <h3>Engineers</h3>
                   <h3>Tim Berners-Lee</h3>
+                  <nav><div><img src="img/tbl-img.jpg" height="300" alt=""></div></nav>
       </main>
       <footer>
          <p> Copyright <span>|</span> Contact | My Address </p>
