Eradicated HTML errors.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,8 @@
     <meta charset="utf-8">
       <title>Bookstore</title>
       <link rel="stylesheet" href="css/style.css">
-   </head> Bookstore Directory
+   </head>
    <body>
-      <header>
-         <nav>
-            <ul>
-               <li>Home</li>
-               <li>About</li>
-               <li>Contact</li>
-            </ul>
-         </nav>
-      </header>
       <main>
          <h1>Bookstore Directory</h1>
             <h2>Art</h2>
@@ -30,8 +21,5 @@
                   <h3>Tim Berners-Lee</h3>
                   <nav><div><img src="img/tbl-img.jpg" height="300" alt=""></div></nav>
       </main>
-      <footer>
-         <p> Copyright <span>|</span> Contact | My Address </p>
-      </footer>
    </body>
 </html>
