--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
             <h2>Art</h2>
                <h3>Artists</h3>
                <h4>Salvidor Dalí</h4>
-                <nav> <div><img src="img/sd-img.jpg" height="300" alt=""></div>
-                  <ul>
-                     <li>Dalí was a skilled draftsman, best known for the striking and bizarre images in his surrealist work. His painterly skills are often attributed to the influence of Renaissance masters. His best-known work, <i>The Persistence of Memory</i>, was completed in August 1931. Dalí’s expansive artistic répertoire included film, sculpture, and photography, in collaboration with a range of artists in a variety of media.</li>
-                  </ul>
-                </nav>
+                <div><img src="img/sd-img.jpg" height="300" alt=""></div>
+                <p>Dalí was a skilled draftsman, best known for the striking and bizarre images in his surrealist work. His painterly skills are often attributed to the influence of Renaissance masters. His best-known work, <i>The Persistence of Memory</i>, was completed in August 1931. Dalí’s expansive artistic répertoire included film, sculpture, and photography, in collaboration with a range of artists in a variety of media.</p>
             <h2>Engineering</h2>
                <h3>Engineers</h3>
                   <h3>Tim Berners-Lee</h3>
